--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["hairlogo", "Ionicons", "jezzz", "JHHHHHHHH", "OLYNUHAIRS"]
+  "cSpell.words": [
+    "hairlogo",
+    "Ionicons",
+    "jezzz",
+    "JHHHHHHHH",
+    "OLYNUHAIRS"
+  ]
 }
